[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/chars/Character.gd" type="Script" id=2]
[ext_resource path="res://src/states/Idle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/states/Moving.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/shaders/CharacterHurt.shader" type="Shader" id=5]
[ext_resource path="res://src/addons/BulletSpawner.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/HIT = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.5576, 2.50954 )

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../SpritePivot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Character" type="KinematicBody2D"]
material = SubResource( 1 )
script = ExtResource( 2 )

[node name="SpritePivot" type="Position2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="SpritePivot"]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.43744, 2.43085 )
shape = SubResource( 3 )

[node name="States" type="Node2D" parent="."]

[node name="Idle" parent="States" instance=ExtResource( 3 )]

[node name="Moving" parent="States" instance=ExtResource( 4 )]

[node name="Addons" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Addons"]
anims/hurt = SubResource( 8 )

[node name="Tween" type="Tween" parent="Addons"]

[node name="BulletSpawners" type="Node2D" parent="Addons"]

[node name="BulletSpawner" parent="Addons/BulletSpawners" instance=ExtResource( 6 )]

[node name="Timers" type="Node2D" parent="."]

[node name="ShotCooldown" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Audio" type="Node2D" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="Audio"]

[node name="Move" type="AudioStreamPlayer" parent="Audio"]

[node name="Hurt" type="AudioStreamPlayer" parent="Audio"]
[connection signal="timeout" from="Timers/ShotCooldown" to="." method="_on_Timer_timeout"]
